# larsim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
EventGenerator/: CMakeLists.txt  FileMuons_module.cc  GNUmakefile  GeneratedEventTimestamp_plugin.cc  LightSourceSteering.txt  LightSource_module.cc  NDKGen_module.cc  NUANCEGen_module.cc  NueAr40CCGenerator.cxx  NueAr40CCGenerator.h  RadioGen_module.cc  SNNueAr40CCGen_module.cc  SingleGen_module.cc  TextFileGen_module.cc  csu40L_buildopticallibrary.fcl  csu40L_fastoptical.fcl  csu40L_fulloptical.fcl  filemuons.fcl  lar20jdjmuons.fcl  lightsource_microboone.fcl.sample  nuance.fcl  nuance_argoneut.fcl  prodndkGolden.fcl  prodnuance.fcl  prodrandsingle.fcl  prodsingle.fcl  prodsingleNEST_uboone.fcl.sample  prodsingle_buildopticallibrary.fcl  prodsingle_dune35t.fcl.sample  prodsingle_dunefd.fcl.sample  prodsingle_dunefd_buildoplib.fcl.sample  prodsingle_dunefd_fastoptical.fcl.sample  prodsingle_fastoptical.fcl  prodsingle_fulloptical.fcl  prodsingle_jp250L.fcl  prodsingle_lariat.fcl  prodsingle_lartpcdetector.fcl  prodsingle_lbne35t.fcl.sample  prodsingle_lbnefd.fcl.sample  prodsingle_lbnefd_buildoplib.fcl.sample  (+16 more)
EventGenerator/CORSIKA/: CMakeLists.txt  CORSIKAGen.fcl  CORSIKAGen_module.cc  prodcosmics_CORSIKA.fcl  prodcosmics_CORSIKA_p.fcl
EventGenerator/CRY/: CMakeLists.txt  CosmicsGen_module.cc  GNUmakefile  cry.fcl  prodcosmics.fcl  prodcosmics_dune35t.fcl.sample  prodcosmics_dunefd.fcl.sample  prodcosmics_lbne35t.fcl  prodcosmics_lbne35t.fcl.sample  prodcosmics_lbnefd.fcl  prodcosmics_lbnefd.fcl.sample
EventGenerator/GENIE/: CMakeLists.txt  GENIEGen_module.cc  GNUmakefile  genie.fcl  genie_dune.fcl.sample  genie_lbne.fcl.sample  genie_microboone.fcl  prodgenie.fcl  prodgenie_dune35t.fcl.sample  prodgenie_dunefd.fcl.sample  prodgenie_lbne35t.fcl  prodgenie_lbne35t.fcl.sample  prodgenie_lbnefd.fcl  prodgenie_lbnefd.fcl.sample
EventGenerator/GaisserParam/: CMakeLists.txt  GNUmakefile  GaisserParam.fcl  GaisserParam_module.cc  prodGaisser.fcl  prodGaisser_HighEnergy.fcl  prodGaisser_MidEnergy.fcl
EventGenerator/MuonPropagation/: GNUmakefile  GaisserParam.fcl  GaisserParam_module.cc  Gen_MUSUN_DUNE4850.fcl  MUSUN.fcl  MUSUN.fcl~  MUSUN_module.cc  MUSUN_module.cc~  prodGaisser_HighEnergy.fcl  prodGaisser_LowEnergy.fcl  prodGaisser_MidEnergy.fcl  prodMUSUN.fcl
EventGenerator/NuWro/: GNUmakefile  NuWroGen_module.cc  prodnuwro.fcl
LArG4/: AuxDetReadout.cxx  AuxDetReadout.h  AuxDetReadoutGeometry.cxx  AuxDetReadoutGeometry.h  CMakeLists.txt  ConfigurablePhysicsList.hh  ConfigurablePhysicsList.icc  CustomPhysicsBuiltIns.hh  CustomPhysicsFactory.hh  CustomPhysicsTable.cxx  CustomPhysicsTable.hh  FastOpticalPhysics.cxx  G4BadIdeaAction.cxx  G4BadIdeaAction.h  G4ThermalElectron.hh  GNUmakefile  ISCalculation.h  ISCalculationNEST.h  ISCalculationSeparate.cxx  ISCalculationSeparate.h  IonizationAndScintillation.cxx  IonizationAndScintillation.h  IonizationAndScintillationAction.cxx  IonizationAndScintillationAction.h  LArG4.mac  LArG4Ana_module.cc  LArG4_module.cc  LArSimChannelAna_module.cc  LArVoxelReadout.cxx  LArVoxelReadout.h  LArVoxelReadoutGeometry.cxx  LArVoxelReadoutGeometry.h  MaterialPropertyLoader.cxx  MaterialPropertyLoader.h  MergeSimSources.cxx  MergeSimSources.h  MergeSimSources_module.cc  MuNuclearSplittingProcess.cxx  MuNuclearSplittingProcess.h  MuNuclearSplittingProcessXSecBias.cxx  (+29 more)
PhotonPropagation/: CMakeLists.txt  GNUmakefile  PhotonLibrary.cxx  PhotonLibrary.h  PhotonLibraryAnalyzer_module.cc  PhotonVisibilityService.h  PhotonVisibilityService_service.cc  photpropmodules.fcl  photpropmodules_dune.fcl.sample  photpropmodules_lbne.fcl  photpropmodules_microboone.fcl.sample  photpropservices.fcl  photpropservices_dune.fcl.sample  photpropservices_lbne.fcl.sample  photpropservices_microboone.fcl.sample  prodsingle_libraryana.fcl
PhotonPropagation/LibraryBuildTools/: AssembleSingleFile.C  CMakeLists.txt  CombineIntoLibrary.sh  OpticalLibraryBuild_Grid.sh  SubmitCommand.pl  SubmitCommand.sh  photon_library.xml  photon_library.xml.sample  prodsingle_buildopticallibrary.fcl
larsim/: CMakeLists.txt
larsim/DetSim/: CMakeLists.txt  DumpRawDigits_module.cc  RecompressRawDigits_module.cc  SimWireAna_module.cc  SimWireT962_module.cc  SimWire_module.cc  WienerFilterAna_module.cc  detsimmodules.fcl  detsimmodules_argoneut.fcl  dump_good_digits.fcl  recompress_raw_digits.fcl
larsim/ElectronDrift/: CMakeLists.txt  DriftElectronstoPlane_module.cc  ElectronDriftAlg.cxx  ElectronDriftAlg.hh  ElectronDrift_module.cc  ISCalculation.cc  ISCalculation.h  ISCalculationSeparate.cc  ISCalculationSeparate.h  ShiftEdepSCE_module.cc  SimDriftElectrons_module.cc  SimDriftedElectronClusterAna_module.cc
larsim/EventGenerator/: BaseRadioGen.h  CMakeLists.txt  FileMuons_module.cc  GeneratedEventTimestamp_plugin.cc  LightSource_module.cc  NDKGen_module.cc  NUANCEGen_module.cc  NucleonDecay_module.cc  NueAr40CCGenerator.cxx  NueAr40CCGenerator.h  POTaccumulator_module.cc  POTsummary.fcl  PhotonGen_module.cc  RadioGen_module.cc  SNNueAr40CCGen_module.cc  SingleGen_module.cc  SpectrumVolumeGen_module.cc  TextFileGen_module.cc  csu40L_buildopticallibrary.fcl  csu40L_fastoptical.fcl  csu40L_fulloptical.fcl  empty_events.fcl  lar20jdjmuons.fcl  lightsource.fcl  photongen.fcl  prodndkGolden.fcl  prodnuance.fcl  prodrandsingle.fcl  prodsingle.fcl  prodsingle_buildopticallibrary.fcl  prodsingle_fastoptical.fcl  prodsingle_fulloptical.fcl  prodsingle_lartpcdetector.fcl  prodtext.fcl  radiological_gen.fcl  singles.fcl  singles_argoneut.fcl  supernova.fcl  textfilegen.fcl
larsim/FluxReader/: CMakeLists.txt  DK2NuInterface.cxx  DK2NuInterface.h  FluxInterface.h  FluxReader.cxx  FluxReader.h  GSimpleInterface.h
larsim/GDMLUtils/: CMakeLists.txt  simplifyGDML.cc
larsim/GenericCRT/: CMakeLists.txt  GenericCRT.cxx  GenericCRT.h  GenericCRT_module.cc  config_genericCRT.fcl  run_genericCRT.fcl
larsim/IonizationScintillation/: CMakeLists.txt  IGapChargeTransport.hh  ISCalc.cxx  ISCalc.h  ISCalcAna_module.cc  ISTPC.cxx  (+12 more)
(+1184 files in other folders)
