add_subdirectory(TriggerAlgo)
add_subdirectory(Simulation)
add_subdirectory(SimFilters)
add_subdirectory(PhotonPropagation)
add_subdirectory(IonizationScintillation)
add_subdirectory(ElectronDrift)
add_subdirectory(MCSTReco)
add_subdirectory(MCCheater)
add_subdirectory(LegacyLArG4)
add_subdirectory(EventGenerator)
add_subdirectory(DetSim)
add_subdirectory(MCDumpers)
## does not build with geant4 v4_10_6_p01
##add_subdirectory(GDMLUtils)
add_subdirectory(EventWeight)
add_subdirectory(MergeSimSources)
