add_subdirectory(Simulation)
add_subdirectory(IonizationScintillation)
add_subdirectory(PhotonPropagation)
add_subdirectory(MCCheater)
add_subdirectory(Utils)
add_subdirectory(ElectronDrift)
add_subdirectory(MCDumpers)
add_subdirectory(LegacyLArG4)
add_subdirectory(DetSim)
add_subdirectory(EventGenerator)
add_subdirectory(EventWeight)
add_subdirectory(GDMLUtils)
add_subdirectory(GenericCRT)
add_subdirectory(MCSTReco)
add_subdirectory(MergeSimSources)
add_subdirectory(SimFilters)
add_subdirectory(TriggerAlgo)
