cet_make_library(HEADERS_TARGET_ONLY)

add_subdirectory(Simulation)
add_subdirectory(IonizationScintillation)
add_subdirectory(PhotonPropagation)
add_subdirectory(MCCheater)
add_subdirectory(Utils)
add_subdirectory(ElectronDrift)
add_subdirectory(MCDumpers)
## disable LegacyLArG4 when building with geant4 4.11
##add_subdirectory(LegacyLArG4)
add_subdirectory(DetSim)
add_subdirectory(EventGenerator)
add_subdirectory(EventWeight)
add_subdirectory(GDMLUtils)
add_subdirectory(GenericCRT)
add_subdirectory(MCSTReco)
add_subdirectory(MergeSimSources)
add_subdirectory(SimFilters)
add_subdirectory(TriggerAlgo)
add_subdirectory(PhotonHitConverter)
add_subdirectory(PPFXFluxReader)
